--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -14,9 +14,9 @@
     justify-content: end;
     height: 100%;
     width: 100%;
-    padding-right: 15px;
+    padding-right: 10px;
     border-radius: 40px;
-    background: url(../../public/svg/cart.svg) no-repeat 15% 60%;
+    background: url(../../public/svg/cart.svg) no-repeat 35% 60%;
     background-size: 50% 60%;
     font-family: var(--f-normal);
     -webkit-transform: rotateY(0deg);
@@ -25,17 +25,32 @@
 
     &:hover {
         cursor: pointer;
+
+        /* quita el on de la navegation. */
+        &::after {
+            z-index: 10;
+            content: "sa";
+            visibility: hidden;
+        }
     }
+
+
 }
 
-/* .txt-item{
-ponerle la poscicion para el lado del carrito.
-} */
-/* quita el on de la navegation. */
-.navbar-item .a-item.🛒:hover::after {
-    z-index: 10;
-    content: "";
-    visibility: hidden;
+.a-item.🛒 .txt-item {
+    position: relative;
+    top: -10px;
+    left: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    color: #fff;
+    background-color: #e00;
 }
 
 /* items de carro abierto */
@@ -49,7 +64,7 @@ ponerle la poscicion para el lado del carrito.
     }
 
     &:checked~.carro-abrir .c-hijo {
-        animation: verSlide .61s;
+        animation: verSlide .67s;
     }
 
     &:not(:checked)~.carro-abrir .c-padre .c-hijo {
@@ -98,7 +113,7 @@ ponerle la poscicion para el lado del carrito.
     }
 }
 
-@media (width <=750px) {
+@media (width <=756px) {
     .navbar-item.carro {
         grid-column: 5/6;
     }
